<resources>
    <string name="app_name" translatable="false">Audio\u00ADmack</string>
    <string name="splash_tryagain">Try again</string>
    <string name="splash_offline">You are not connected to the internet and can only play downloaded music.</string>
    <string name="splash_gotodownloads">GO TO OFFLINE MUSIC</string>
    <string name="splash_message">In order to provide the best experience we ask you to enable the following permissions:</string>
    <string name="splash_storage">File Access</string>
    <string name="splash_storage_message">Allows you to download songs and albums</string>
    <string name="splash_location">Location</string>
    <string name="splash_location_message">Enables Audiomack to show popular music in your area</string>
    <string name="splash_notifications">Push Notifications</string>
    <string name="splash_notifications_message">Allows us to notify you when hot new music is released</string>
    <string name="splash_ok">OK, GOT IT!</string>
    <string name="splash_later">Maybe later?</string>
    <string name="splash_privacy_policy">Privacy Policy</string>
    <string name="splash_autologin_timeout_error_message">We are having trouble connecting. Please check your internet connection</string>
    <string name="splash_autologin_timeout_error_ok">OK</string>
    <string name="splash_autologin_fail_message">Failed to login</string>
    <string name="splash_autologin_facebook_error_message">Facebook token refresh failed</string>
    <string name="home_tab_feed">Feed</string>
    <string name="home_tab_playlists">Playlists</string>
    <string name="home_tab_search">Search</string>
    <string name="home_tab_library">My Library</string>
    <string name="signup_tos">By signing up you agree to our Terms of Service and Privacy Policy</string>
    <string name="signup_tos_highlighted_tos">Terms of Service</string>
    <string name="signup_tos_highlighted_privacy">Privacy Policy</string>
    <string name="signup_username">Enter a username</string>
    <string name="signup_email">Enter your email</string>
    <string name="signup_password">Create a password</string>
    <string name="signup_password_confirm">Confirm your password</string>
    <string name="signup_create">CREATE YOUR ACCOUNT</string>
    <string name="signup_facebook">Sign up with Facebook</string>
    <string name="signup_go_to_login">ALREADY HAVE AN ACCOUNT?</string>
    <string name="signup_header">CREATE A FREE ACCOUNT</string>
    <string name="signup_birthday_label">When is your birthday?</string>
    <string name="signup_gender_label">What is your gender?</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_gender_other">Non-binary</string>
    <string name="signup_disclaimer">Audiomack uses this data to personalize your experience, help artists understand their listeners, and more. We will always keep your personal data anonymous.</string>
    <string name="signup_finish">Finish</string>
    <string name="signup_error_birthday">Please enter a valid birthday</string>
    <string name="signup_error_gender">Please select a gender</string>
    <string name="login_show_password">Show Password</string>
    <string name="login_error_timestamp">Timestamp Expired. This might mean that the clock on your device is wrong. Please check the time and date and if you still have issues email support@audiomack.com.</string>
    <string name="login_error_1037">Cannot retrieve necessary details. Please make sure you have an email address set in your account and try again.</string>
    <string name="login_header">SIGN IN TO YOUR ACCOUNT</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_cta">SIGN IN</string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="login_go_to_signup_hint">Don\'t have an account?</string>
    <string name="login_go_to_signup">CREATE A FREE ACCOUNT</string>
    <string name="login_facebook_error_message">Login with Facebook failed</string>
    <string name="login_facebook_error_button">OK</string>
    <string name="login_error_title">Login error</string>
    <string name="login_error_message_facebook">Facebook error</string>
    <string name="login_tos">By signing into audiomack you agree to\nour Terms of Service and Privacy Policy</string>
    <string name="login_tos_highlighted_tos">Terms of Service</string>
    <string name="login_tos_highlighted_privacy">Privacy Policy</string>
    <string name="signup_error_title">Signup error</string>
    <string name="authentication_validation_username_empty">Username is empty</string>
    <string name="authentication_validation_email_empty">Email is empty</string>
    <string name="authentication_validation_password_empty">Password is empty</string>
    <string name="authentication_validation_password_mismatch">Passwords don\'t match</string>
    <string name="logout_alert_title">Logout</string>
    <string name="logout_alert_message">Logout of Audiomack?</string>
    <string name="logout_alert_no">Cancel</string>
    <string name="logout_alert_yes">OK</string>
    <string name="forgot_password_alert_title">Forgot Password</string>
    <string name="forgot_password_alert_message">Enter your email and we will send you steps to reset your password</string>
    <string name="forgot_password_alert_no">Cancel</string>
    <string name="forgot_password_alert_yes">Submit</string>
    <string name="forgot_password_alert_hint">Email address</string>
    <string name="forgot_password_success">Thank you. Please check your email for instructions to reset your password. It may be in your spam folder.</string>
    <string name="forgot_password_failure_template">%s If you are having trouble please email us at support@audiomack.com</string>
    <string name="premium_start_trial">START YOUR FREE 7-DAY TRIAL</string>
    <string name="premium_price_template">%s per month after trial</string>
    <string name="premium_toc">Audiomack Premium Subscription\nTerms &amp; Conditions</string>
    <string name="premium_desc_template">Audiomack Premium is a recurring subscription.  You will automatically be billed %s per month through your Google Play account at the end of your 7-day trial.  Your subscription will auto-renew unless you cancel or turn off auto-renew at least 24 hours before the end of the billing period.  You can manage your subscription in the Google Play Store.</string>
    <string name="premium_desc_template_ios">If you purchase an Audiomack Subscription (%s per month), payment will be charged to your iTunes account, and your account will be charged for renewal within 24 hours prior to the end of the current subscription period. If you would like to no longer be billed for Audiomack Gold/Platinum and cancel your premium membership, please be sure to do so before this 24 hour cutoff has passed. Auto-renewal can be turned off at any time by going to your Settings in the iTunes Store after purchase. All prices mentioned here and in the app for Gold/Platinum subscription tiers are in U.S. dollars, may vary in other countries around the world, and are subject to change in the future. No cancellation of the current subscription is allowed during your active subscription period. Audiomack is always free to use without a subscription, and you may resume using Audiomack with ads at any time after your subscription ends.</string>
    <string name="premium_no_active_subscriptions">You don\'t have an active subscription.</string>
    <string name="premium_unable_restore">Unable to restore previous purchase</string>
    <string name="premium_restore">Restore Previous Purchase</string>
    <string name="premium_and">and</string>
    <string name="premium_terms_of_service">Terms of Service</string>
    <string name="premium_privacy_policy">Privacy Policy</string>
    <string name="premium_subscribing">By subscribing you access Audiomack\'s</string>
    <string name="premium_2019_title">Upgrade to\nAudiomack Premium</string>
    <string name="premium_2019_subtitle">Start your 7-Day free trial and get:</string>
    <string name="premium_2019_adfree">An ad-free experience</string>
    <string name="premium_2019_adfree_desc">Unlimited playback with no ad interruptions or banners</string>
    <string name="premium_2019_playlist">Download full playlists</string>
    <string name="premium_2019_playlist_desc">Save all the songs in any playlist to your device in one tap</string>
    <string name="premium_2019_hifi">High quality streaming</string>
    <string name="premium_2019_hifi_desc">Make sure you hear every song at the highest quality available</string>
    <string name="premium_2019_airplay">Airplay to music devices</string>
    <string name="premium_2019_airplay_desc">Want to play on Airplay-enabled devices? Cast right from the player</string>
    <string name="premium_2019_equalizer">Equalizer controls</string>
    <string name="premium_2019_equalizer_desc">Make your music sound how you like with bass and treble customization</string>
    <string name="premium_2019_trial">Free 7-day trial</string>
    <string name="premium_2019_trial_desc">Try before you buy – Get all of the above free for a week after you start</string>
    <string name="defaultgenre_title">SET DEFAULT GENRE</string>
    <string name="notifications_title">NOTIFICATIONS</string>
    <string name="favorites_filter_allmusic">All</string>
    <string name="favorites_filter_songs">Songs</string>
    <string name="favorites_filter_albums">Albums</string>
    <string name="favorites_filter_playlists">Playlists</string>
    <string name="shortcuts_offline_short">Offline</string>
    <string name="shortcuts_offline_long">Offline</string>
    <string name="shortcuts_offline_disabled">Offline</string>
    <string name="shortcuts_topsongs_short">Top Songs</string>
    <string name="shortcuts_topsongs_long">Top Songs</string>
    <string name="shortcuts_topsongs_disabled">Top Songs</string>
    <string name="shortcuts_favorites_short">Favorites</string>
    <string name="shortcuts_favorites_long">Favorites</string>
    <string name="shortcuts_favorites_disabled">Favorites</string>
    <string name="shortcuts_playlists_short">Playlists</string>
    <string name="shortcuts_playlists_long">Playlists</string>
    <string name="shortcuts_playlists_disabled">Playlists</string>
    <string name="accessibility_close">Close</string>
    <string name="confirm_report_alert_title">Please describe the issue</string>
    <string name="confirm_report_report_alert_message">Select the best description for the cause of this report/block</string>
    <string name="confirm_report_alert_submit">SUBMIT</string>
    <string name="confirm_report_alert_option_violent">This is violent / pornographic visual or audio content</string>
    <string name="confirm_report_alert_option_broken">This content doesn\'t stream or download</string>
    <string name="confirm_report_alert_option_misleading">This content is misleading or mislabeled</string>
    <string name="confirm_report_alert_option_spam">This account engages in spam or harassment</string>
    <string name="confirm_report_alert_option_infringement">I believe this is copyright infringement</string>
    <string name="premium_2019_sleep_timer">Sleep Timer</string>
    <string name="premium_2019_sleep_timer_desc">Set a timer to stop your audio so you can sleep without running the app all night</string>
    <string name="playlists_filter_my">MY PLAYLISTS</string>
    <string name="playlists_filter_favorited">FAVORITED</string>
    <string name="playlists_filter_offline">OFFLINE-ONLY</string>
    <string name="premium_2019_premiumdownloads">Unlimited Downloads</string>
    <string name="premium_2019_premiumdownloads_desc">Unlimited downloads of everything on audiomack</string>
</resources>