<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_login_logo" />

        <com.audiomack.views.AMCustomFontTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/confirm_report_alert_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:customletterspacing="-0.46" />

        <com.audiomack.views.AMCustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/confirm_report_report_alert_message"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            app:customletterspacing="-0.44" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <com.audiomack.views.AMCustomFontTextView
                android:id="@+id/tvViolent"
                style="@style/ReportContentSelection"
                android:text="@string/confirm_report_alert_option_violent" />

            <com.audiomack.views.AMCustomFontTextView
                android:id="@+id/tvBroken"
                style="@style/ReportContentSelection"
                android:text="@string/confirm_report_alert_option_broken" />

            <com.audiomack.views.AMCustomFontTextView
                android:id="@+id/tvMisleading"
                style="@style/ReportContentSelection"
                android:text="@string/confirm_report_alert_option_misleading" />

            <com.audiomack.views.AMCustomFontTextView
                android:id="@+id/tvSpam"
                style="@style/ReportContentSelection"
                android:text="@string/confirm_report_alert_option_spam" />

            <com.audiomack.views.AMCustomFontTextView
                android:id="@+id/tvInfringement"
                style="@style/ReportContentSelection"
                android:text="@string/confirm_report_alert_option_infringement" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="215dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <com.audiomack.views.AMCustomFontButton
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/popup_rounded_button"
                android:enabled="false"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/confirm_report_alert_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="visible"
                app:customletterspacing="-0.72" />

            <ImageView
                android:id="@+id/ivSaveOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/popup_rounded_button_overlay"
                android:contentDescription="@string/confirm_report_alert_submit"
                android:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>