<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:clipToPadding="false"
    android:paddingStart="4dp"
    android:paddingTop="15dp"
    android:paddingEnd="4dp"
    android:paddingBottom="10dp"
    android:scrollbars="none">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_gray_dark"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.audiomack.views.AMCustomFontRadioButton
            android:id="@+id/radioMine"
            style="@style/PillFilter"
            android:text="@string/playlists_filter_my"
            tools:checked="true" />

        <com.audiomack.views.AMCustomFontRadioButton
            android:id="@+id/radioFavorited"
            style="@style/PillFilter"
            android:text="@string/playlists_filter_favorited" />

        <com.audiomack.views.AMCustomFontRadioButton
            android:id="@+id/radioOffline"
            style="@style/PillFilter"
            android:text="@string/playlists_filter_offline" />

    </RadioGroup>

</HorizontalScrollView>